--- a/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -6,38 +6,43 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/css/styles.css"/>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
     <title>Index</title>
 </head>
 <body>
-    <div>
-       hahaha
-        <form asp-action="RsvpForm" method="post">
-            <p>
-                <label asp-for="Name">Your Name:</label>
-                <input asp-for="Name"/>
-            </p>
-            <p>
-                <label asp-for="Email">Email:</label>
-                <input asp-for="Email"/>         
-            </p>
-            <p>
-                <label asp-for="Phone">Phone:</label>
-                <input asp-for="Phone"/>      
-            </p>
-            <p>
-                <label asp-for="Nickname">Nickname</label>
-                <input asp-for="Nickname"/>
-            </p>
-            <p>
-                <label>Will you attend?</label>
-                <select asp-for="WillAttend">
-                    <option value="">choose:</option>
-                    <option value="true">Yes</option>
-                    <option value="false">No</option>
-                </select>
-            </p>
-            <button type="submit">Submit</button>
-        </form>
+    <div class="panel panel-success">  
+        <div class="panel-heading text-center"><h4>RSVP</h4></div>
+        <div class=" panel panel-warning" asp-validation-summary="All"></div>
+        <div class="panel-body">
+            <form class="p-a-1" asp-action="RsvpForm" method="post">
+                <div class="form-group">
+                    <label asp-for="Name">Your Name:</label>
+                    <input class="form-control" asp-for="Name" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email">Email:</label>
+                    <input class="form-control" asp-for="Email" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Phone">Phone:</label>
+                    <input class="form-control" asp-for="Phone" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Nickname">Nickname</label>
+                    <input class="form-control" asp-for="Nickname" />
+                </div>
+                <div class="form-group">
+                    <label>Will you attend?</label>
+                    <select class="form-control" asp-for="WillAttend">
+                        <option value="">choose:</option>
+                        <option value="true">Yes</option>
+                        <option value="false">No</option>
+                    </select>
+                </div>
+                <button class="btn btn-primary" type="submit">Submit</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
