--- a/PartyInvites/PartyInvites/Views/Home/Thanks.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/Thanks.cshtml
@@ -9,12 +9,19 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Thanks @Model.Name</title>
+    <link rel="stylesheet" href="~/css/styles.css"/>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
 </head>
-<body>
-    <h1>Thank you @Model.Name (@Model.Nickname)</h1>
-    <p>
-        You have responded with <b style="font-size:50px"> @(Model.WillAttend == true ? "yes" : "no") </b>
-    </p>
-    <p>Also coming - click <a asp-action="ListResponses">here</a></p>
+<body class="text-center">
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <h1>Thank you @Model.Name a.k.a. @Model.Nickname</h1>
+        </div>
+        <div class="panel panel-body">
+            You have responded with <span class="response-text"> @(Model.WillAttend == true ? "yes" : "no")</span>
+        </div>
+        <p>Also coming - click <a asp-action="ListResponses">here</a></p>
+        <p>Back to input - click <a asp-action="RsvpForm">here</a></p>
+    </div>
 </body>
 </html>
