--- a/RazorExample/RazorExample/Views/Shared/_BasicLayout.cshtml
+++ b/RazorExample/RazorExample/Views/Shared/_BasicLayout.cshtml
@@ -8,6 +8,7 @@
         #mainDiv{
             border:1px solid red;
             font-size:20px;
+            text-align:center;
         }
     </style>
 </head>
