--- a/SportsStore/SportsStore/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore/Views/Product/List.cshtml
@@ -1,10 +1,23 @@
 ﻿@model IEnumerable<Product>
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>name</th>
+            <th>descrip</th>
+            <th>Price</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (Product p in Model)
+        {
+            <tr>
+                <td>@p.ProductID</td>
+                <td>@p.Name</td>
+                <td>@p.Description</td>
+                <td>@p.Price.ToString()</td>
+            </tr>
+        }
+    </tbody>
 
-@foreach(Product p in Model)
-{
-    <div>
-        <h3>@p.Name</h3>
-        <p>@p.Description</p>
-        <h4>@p.Price.ToString()</h4>
-    </div>
-}
+</table>
