--- a/SportsStore/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/SportsStore/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/lib/"/>
     <title>Sports Store</title>
 </head>
 <body>
