--- a/SportsStore/SportsStore/Views/Product/ListExt.cshtml
+++ b/SportsStore/SportsStore/Views/Product/ListExt.cshtml
@@ -2,16 +2,7 @@
 
 @foreach(Product p in Model.Products)
 {
-    <div class="card card-group m-1 p-1">
-        <div class="bg-light p-1">
-            <h4>@p.Name
-                <span class="badge badge-pill badge-primary m-1" style="float:right">
-                    <small>@(p.Price > 0 ? p.Price.ToString("c") : "free") </small>
-                </span>
-            </h4>
-            <div class="card-text p-1">@p.Description</div>
-        </div>
-    </div>
+    @Html.Partial("ProductSummary", p);
 }
 <div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true" page-class="btn"
     page-class-normal="btn-secondary" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
