--- a/SportsStore/SportsStore/Views/Product/ListExt.cshtml
+++ b/SportsStore/SportsStore/Views/Product/ListExt.cshtml
@@ -1,8 +1,20 @@
 ﻿@model  ProductListViewModel
 
+@if(Model.Products.Count() == 0)
+{
+    <div class="">
+
+    </div>
+}
+
 @foreach(Product p in Model.Products)
 {
-    @Html.Partial("ProductSummary", p);
+    @await Html.PartialAsync("ProductSummary", p);
 }
-<div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true" page-class="btn"
-    page-class-normal="btn-secondary" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
+<div page-model="@Model.PagingInfo" page-action="List" 
+    page-classes-enabled="true" 
+    page-class="btn"
+    page-class-normal="btn-secondary" 
+    page-class-selected="btn-primary"
+    page-url-category="@Model.CurrentCategory"
+    class="btn-group pull-right m-1"></div>
