--- a/SportsStore/SportsStore/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore/SportsStore/Views/Shared/ProductSummary.cshtml
@@ -1,11 +1,23 @@
-﻿<div class="card card-group m-1 p-1">
+﻿@model Product
+
+<div class="card card-group m-1 p-1">
     <div class="bg-light p-1">
         <h4>
             @Model.Name
-            <span class="badge badge-pill badge-primary m-1" style="float:right">
+            <span class="badge badge-pill badge-primary m-1 float-right">
                 <small>@(Model.Price > 0 ? Model.Price.ToString("c") : "free") </small>
             </span>
         </h4>
-        <div class="card-text p-1">@Model.Description</div>
+        <form asp-action="AddToCart" asp-controller="Cart" id="@Model.ProductID" method="post">
+            <input type="hidden" asp-for="@Model.ProductID" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <div class="card-text p-1">
+                <span class="m-3 p-0">@Model.Description</span>                          
+                <button type="submit" class="btn btn-success btn-sm float-right">
+                    Add To Cart
+                </button>
+            </div>
+        </form>        
+
     </div>
 </div>
