--- a/SportsStore/SportsStore/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore/SportsStore/Views/Shared/ProductSummary.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<div class="card card-group m-1 p-1">
+<div class="card m-1 p-1 w-50">
     <div class="bg-light p-1">
         <h4>
             @Model.Name
@@ -11,13 +11,14 @@
         <form asp-action="AddToCart" asp-controller="Cart" id="@Model.ProductID" method="post">
             <input type="hidden" asp-for="@Model.ProductID" />
             <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <input type="hidden" name="quantity" value="1" />
             <div class="card-text p-1">
-                <span class="m-3 p-0">@Model.Description</span>                          
+                <span class="m-3 p-0">@Model.Description</span>
                 <button type="submit" class="btn btn-success btn-sm float-right">
                     Add To Cart
                 </button>
             </div>
-        </form>        
+        </form>
 
     </div>
 </div>
