--- a/SportsStore/SportsStore/Views/Cart/Index.cshtml
+++ b/SportsStore/SportsStore/Views/Cart/Index.cshtml
@@ -17,6 +17,13 @@
                 <td class="text-left">@line.Product.Name</td>
                 <td class="text-right p-1">@line.Product.Price.ToString("c")</td>
                 <td class="text-right">@((line.Quantity * line.Product.Price).ToString("c"))</td>
+                <td>
+                    <form asp-action="RemoveFromCart" asp-controller="Cart" method="post">
+                        <input type="hidden" name="productId" value="@line.Product.ProductID" />
+                        <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                    </form>
+                </td>
             </tr>
         }
     </tbody>
